--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     text-align: center;    
     /*background: #1abc9c;*/
     width:100%;  height: 50vh;    
-    background-image: url("../img/img-header7.jpg");
+    background-image: url('../img/img-header7.jpg');
     background-position: center center;
     background-size: cover;
     min-width: 100%;
